<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_timer_latency_measurement</name>
  <version>0.0.0</version>
  <description>measurement tool for nanosleep latency and timer callback latency.</description>
  <maintainer email="hasegawa@isp.co.jp">hasegawa</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>rttest</buildtool_depend>
  <buildtool_depend>tlsf_cpp</buildtool_depend>
  <buildtool_depend>rcl</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
